# TengineGst

./: CMakeLists.txt  README.md
cmake/: config.h.in  cross.cmake  tengine-streamer.pc.in
docs/: README.md
gst/: CMakeLists.txt
gst-libs/: CMakeLists.txt
gst-libs/gst/: CMakeLists.txt
gst-libs/gst/mqtt/: CMakeLists.txt  gstmqtt.c  gstmqtt.h  mqtt.cpp  mqtt.h
gst-libs/gst/postprocess/: CMakeLists.txt  gstpostprocess.c  gstpostprocess.h  postprocess.cpp  postprocess.h  postprocess_service_cv.cpp  postprocess_service_cv.h
gst-libs/gst/streamdemux/: CMakeLists.txt  gststreamdemux.c  gststreamdemux.h
gst-libs/gst/streammux/: CMakeLists.txt  gststreammux.c  gststreammux.h
gst-libs/gst/videoanalysis/: CMakeLists.txt  gstvideoanalysis.c  gstvideoanalysis.h  videoanalysis.cpp  videoanalysis.h
gst/common/include/: baseinfer.h  inferinf.h  plugin_ins.h
gst/common/src/: baseinfer.cpp  plugin_ins.cpp
gst/gst_infer_meta/: CMakeLists.txt  gst_infer_meta.c  gst_infer_meta.h
gst/include/: base64.h  base64.hpp  cJSON.h  common.h  debug.h  hash.h  http_client.h  infer_service_plugin.h  linux_list.h  loger.h  md5.h  md5.hpp  mempool.h  normal.h  socket.h
gst/include/corecv/: corecv.hpp
gst/include/corecv/calib3d/: calib3d.hpp
gst/include/corecv/calib3d/calib3d/: calib3d_c.h
gst/include/corecv/common/: cv_cpu_config.h  cvconfig.h
gst/include/corecv/core/: core.hpp  opencv_modules.hpp
gst/include/corecv/core/core/: affine.hpp  base.hpp  check.hpp  comm_ive.hpp  core_c.h  core_types_c.h  cv_cpu_dispatch.h  cvdef.h  cvstd.hpp  fast_math.hpp  mat.hpp  mat.inl.hpp  matx.hpp  neon_utils.hpp  optim.hpp  persistence.hpp  private.hpp  saturate.hpp  traits.hpp  types.hpp  utility.hpp  wimage.hpp
gst/include/corecv/core/core/hal/: core_hal.hpp  intrin.hpp  intrin_cpp.hpp  intrin_neon.hpp  intrin_sse.hpp  intrin_vsx.hpp
gst/include/corecv/core/core/private/: cv_cpu_include_simd_declarations.hpp
gst/include/corecv/core/core/utils/: configuration.private.hpp  filesystem.hpp  trace.hpp  trace.private.hpp
gst/include/corecv/features2d/: features2d.hpp
gst/include/corecv/flann/: flann.hpp
gst/include/corecv/flann/flann/: general.h  hdf5.h  miniflann.hpp  timer.h
gst/include/corecv/imgcodecs/: imgcodecs.hpp
gst/include/corecv/imgcodecs/imgcodecs/: imgcodecs_c.h  ios.h
gst/include/corecv/imgproc/: imgproc.hpp
gst/include/corecv/imgproc/imgproc/: imgproc_c.h  imgproc_types_c.h
gst/include/corecv/imgproc/imgproc/hal/: imgproc_hal.hpp
gst/include/corecv/video/: video.hpp
gst/include/corecv/video/opencv2/: background_segm.hpp  ffttools.hpp  fhog.hpp  ioutracker.hpp  ive_lktracker.hpp  ive_ncctracker.hpp  kcftracker.hpp  lkpyramid.hpp  mosse_tracker.hpp  ncctracker.hpp  recttools.hpp  tracker.h  tracking.hpp
gst/include/json/: autolink.h  forwards.h
gst/inferservice/: CMakeLists.txt  amlogic_retinaface_detect.cpp  amlogic_retinaface_multi_detect_algo.h  helper.hpp  objdetect.cpp  objdetect.h
samples/: CMakeLists.txt
samples/gst_sample/: bak-CMakeLists.txt  gst-launch.sh  main.c
samples/models/: from_onnx_UINT8.tmfile
utils/: CMakeLists.txt  normal.cpp  socket.c
utils/base64/: base64.c
utils/cjson/: cJSON.c
utils/hash/: hash.cpp
utils/http_client/: http_client.cpp
utils/json/: json_value.cpp
utils/loger/: loger.cpp  zlog.conf
utils/md5/: md5.c
utils/mempool/: mempool.cpp
